--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your Ronak and this my first webapp.
+			<h4> A new heading </h4>
+			Local app
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
