[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,1 +1,24 @@
-
+<html>
+     <head>
+         <title>
+         article one-ronak
+         <title></title>
+     </head>
+     <body>
+         <div>
+             <a href="/">Home</a>
+         </div>
+         <hr/>
+         <h3>
+             article one
+         </h3>
+         <div>
+             sep 5,2016
+         </div>
+         <div>
+             <p>
+                 this is 1 paragraph. this is 1 paragraph. this is 1 paragraph. this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.this is 1 paragraph.
+             </p>
+         </div>
+     </body>
+</html>
